--- a/Asset/css/scroll.css
+++ b/Asset/css/scroll.css
@@ -1,6 +1,6 @@
 .section {
     text-align: center;
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     /* height: 100vh; */
     /* letter-spacing: 4px; */
@@ -103,7 +103,7 @@
 .section:nth-child(8) {
     box-shadow: inset 0 1px 80px rgba(0, 0, 0, 0.14);
     color: #fff;
-    top: calc (700vh - 50px);
+    top: 700vh;
     z-index: 8;
 }
 
